--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/Jerome361/library#readme",
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "chalk": "^3.0.0",
-    "express": "^4.17.1"
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "morgan": "^1.9.1"
   }
 }
