--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
