--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "mongodb": "^3.5.5",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "pug": "^2.0.4"
